--- a/ReactionTester.html
+++ b/ReactionTester.html
@@ -34,7 +34,7 @@
 		
 		<script type="text/javascript">
 		
-			var colors = ["red","blue"];
+			/*var colors = ["red","blue"];
 			var dim = [5000,1000];
 			var id = ["circle","square"];
 			
@@ -43,7 +43,7 @@
 			var x = Math.random() < 0.5 ? colors[0]:colors[1];
 			var y = Math.random() < 0.5 ? dim[0]:dim[1];
 			var z = Math.random() < 0.5 ? id[0]:id[1];
-			
+			*/
 			//alert(x);
 			//alert(y);
 			//alert(z);
@@ -67,7 +67,7 @@
 				var m = Math.random()*500;
 				document.getElementById("shape").style.margin = m +"px";
 				
-				var hw = Math.random()*200;
+				var hw = Math.random()*300;
 				document.getElementById("shape").style.height = hw +"px";
 				document.getElementById("shape").style.width = hw +"px";
 				
